# SQL-dashboard

./: README.md  docker-compose.yaml  index.html
assets/: index-CMwLUKY-.css  index-tW4Opaou.js
backend/: pyproject.toml
backend/config/: settings.py  urls.py
frontend/: .prettierrc  Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/layout/: Header.jsx  Layout.jsx  Sidebar.jsx
frontend/src/components/ui/: Button.jsx  DashboardCard.jsx  DataTable.jsx  InsertForm.jsx  LineGraph.jsx  Pagination.jsx  QueryChart.jsx  QueryFilters.jsx  QueryTable.jsx
frontend/src/hooks/: useTheme.js
frontend/src/pages/: AnalyticsPage.jsx  Dashboard.jsx  QueriesPage.jsx  ReportsPage.jsx  SettingsPage.jsx  UserPage.jsx
