[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Nasrat", email  = 'nasratulla2006@gmail.com'}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.1,<6.0.0)",
    "djangorestframework (>=3.16.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
